--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Phometheus</title>
+    <title>Phometheu</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
+                        <li><a href="#"><i class="fa fa-user fa-fw"></i> Editar Perfil</a>
                         </li>
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Configuracoes</a>
                         </li>
