Criação dos formulários
Criação dos arquivos htmls dos formulários e migração do formulário de cadastro de enfermetiro.

--- a/pages/index.html
+++ b/pages/index.html
@@ -91,19 +91,19 @@
                             <a href="#"><i class="fa fa-plus-circle fa-fw"></i> Cadastros<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Médico</a>
+                                    <a href="medicos.html">Médico</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Enfermeiro</a>
+                                    <a href="enfermeiro.html">Enfermeiro</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Técnico de Enf.</a>
+                                    <a href="tecnico.html">Técnico de Enf.</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Paciente</a>
+                                    <a href="paciente.html">Paciente</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Maqueiro</a>
+                                    <a href="maqueiro.html">Maqueiro</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -115,7 +115,7 @@
                                     <a href="flot.html">Novo</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Consultar</a>
+                                    <a href="consulta_prontuario.html">Consultar</a>
                                 </li>
                             </ul>
                         </li>
@@ -126,7 +126,7 @@
                                   <a href="flot.html">Novo</a>
                               </li>
                               <li>
-                                  <a href="flot.html">Consultar</a>
+                                  <a href="consulta_medicamento.html">Consultar</a>
                               </li>
                             </ul>
                             <!-- /.nav-second-level -->
