--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -146,7 +146,119 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Blank</h1>
+                        <h1 class="page-header">Cadastro de Maqueiro</h1>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <div class="panel panel-default">
+                          <div class="panel-body">
+                            <div class="row">
+                                <form role="form">
+
+                                  <div class="form-group col-sm-12">
+                                    <label>* Nome</label>
+                                    <input name="nome" type="text" class="form-control" placeholder="Digite seu nome">
+                                  </div>
+
+                                  <div class="form-group col-sm-12">
+                                    <label>* E-mail</label>
+                		                <input name="email" type="text" class="form-control" placeholder="Digite seu e-mail">
+                                  </div>
+
+                                  <div class="form-group col-sm-6">
+                                    <label>Telefone</label>
+                                    <input name="" type="text" class="form-control" placeholder="Digite seu telefone" id="telefone">
+                                  </div>
+
+                                  <div class="form-group col-sm-6">
+                                    <label>Celular</label>
+                		                <input name="" type="text" class="form-control" placeholder="Digite seu número de celular" id="celular">
+                                  </div>
+
+                                  <div class="form-group col-sm-6">
+                                    <label>Data de Nascimento</label>
+                		                <input name="" type="text" class="form-control" placeholder="Informe a data de nascimento" id="data">
+                                  </div>
+
+                	              	<div class="form-group col-sm-6">
+                                    <label>Sexo</label>
+                                    <select name="" class="form-control mr-sm-2">
+                                      <option>Selecione</option>
+                                      <option>Masculino</option>
+                                      <option>Feminino</option>
+                                    </select>
+                                  </div>
+
+                                  <div class="form-group col-sm-4">
+                                    <label>CEP</label>
+                                    <input name="" type="text" class="form-control" placeholder="Informe o CEP" id="cep">
+                                  </div>
+
+                                  <div class="form-group col-sm-8">
+                  		                <label>Endereço</label>
+                  		                <input name="" type="text" placeholder="Infome o endereço" class="form-control">
+                  	            	</div>
+
+                                  <div class="form-group col-sm-4">
+                  		                <label>Número</label>
+                  		                <input name="" type="text" placeholder="Número" class="form-control" >
+                  	            	</div>
+
+                                  <div class="form-group col-sm-8">
+                  		                <label>Complemento</label>
+                  		                <input name="" type="text" placeholder="Complemento" class="form-control">
+                  	            	</div>
+
+                                  <div class="form-group col-sm-6">
+                  		                <label>Bairro</label>
+                  		                <input name="" type="text" placeholder="Infome o bairro" class="form-control">
+                  	            	</div>
+
+                                  <div class="form-group col-sm-6">
+                  		                <label>Cidade</label>
+                  		                <input name="" type="text" placeholder="Informe a cidade" class="form-control">
+                  	            	</div>
+
+                                  <div class="form-group col-sm-6">
+                		                <label>Estado</label>
+                		                <select name="" class="form-control mr-sm-2">
+                		                    <option>Selecione o estado</option>
+                		                    <option value="AC">Acre</option>
+                		                    <option value="AL">Alagoas</option>
+                		                    <option value="AP">Amapá</option>
+                		                    <option value="AM">Amazonas</option>
+                		                    <option value="BA">Bahia</option>
+                		                    <option value="CE">Ceará</option>
+                		                    <option value="DF">Distrito Federal</option>
+                		                    <option value="ES">Espirito Santo</option>
+                		                    <option value="GO">Goiás</option>
+                		                    <option value="MA">Maranhão</option>
+                		                    <option value="MS">Mato Grosso do Sul</option>
+                		                    <option value="MT">Mato Grosso</option>
+                		                    <option value="MG">Minas Gerais</option>
+                		                    <option value="PA">Pará</option>
+                		                    <option value="PB">Paraíba</option>
+                		                    <option value="PR">Paraná</option>
+                		                    <option value="PE">Pernambuco</option>
+                		                    <option value="PI">Piauí</option>
+                		                    <option value="RJ">Rio de Janeiro</option>
+                		                    <option value="RN">Rio Grande do Norte</option>
+                		                    <option value="RS">Rio Grande do Sul</option>
+                		                    <option value="RO">Rondônia</option>
+                		                    <option value="RR">Roraima</option>
+                		                    <option value="SC">Santa Catarina</option>
+                		                    <option value="SP">São Paulo</option>
+                		                    <option value="SE">Sergipe</option>
+                		                    <option value="TO">Tocantins</option>
+                		                </select>
+                                  </div>
+
+                                </form>
+                              <input type="submit" class="btn btn-primary col-sm-12" value="CADASTRAR">
+                  	        </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
