--- a/pages/forms.html
+++ b/pages/forms.html
@@ -379,7 +379,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Basic Form Elements
+                            <h4>Basic Form Elements</h4>
                         </div>
                         <div class="panel-body">
                             <div class="row">
