--- a/pages/novo_medicamento.html
+++ b/pages/novo_medicamento.html
@@ -33,10 +33,8 @@
 </head>
 
 <body>
-
     <div id="wrapper">
 
-        <!-- Navigation -->
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -144,20 +142,276 @@
         <!-- Page Content -->
         <div id="page-wrapper">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">Blank</h1>
-                    </div>
+
+              <br>
+              <br>
+
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <div class="panel panel-primary">
+
+                          <div class="panel-heading">
+                              <b>MEDICAMENTOS</b>
+                          </div>
+                          <!-- /.panel-heading -->
+                          <div class="panel-body">
+
+                            <ul class="nav nav-tabs">
+                                <li class="active"><a href="#Cadastrar" data-toggle="tab">Cadastrar</a>
+                                </li>
+                                <li><a href="#Consultar" data-toggle="tab">Consultar</a>
+                                </li>
+                            </ul>
+
+                            <br>
+
+                            <div class="tab-content">
+                              <div class="tab-pane fade in active" id="Cadastrar">                                  
+                                <div class="row">
+                                  <form role="form">
+
+                                    <div class="form-group col-sm-2">
+                                      <label>Código:</label>
+                                      <input name="codigo" type="text" class="form-control" placeholder="Código">
+                                    </div>
+
+                                    <div class="form-group col-sm-2">
+                                      <label>Data de Cadastro:</label>
+                  		                <input name="Data de Cadastro" type="text" class="form-control" placeholder="Data">
+                                    </div>
+
+                                    <div class="form-group col-sm-8">
+                                      <label>Nome:</label>
+                                      <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento">
+                                    </div>
+
+                                    <div class="form-group col-sm-12">
+                                      <label>Descrição:</label>
+                  		                <textarea class="form-control" rows="3"></textarea>
+                                    </div>
+
+                                    <div class="form-group col-sm-6">
+                                      <label>Princípio Ativo:</label>
+                                      <input name="" type="text" class="form-control" placeholder="Princípio atívo da medicação">
+                                    </div>
+
+                                    <div class="form-group col-sm-6">
+                                      <label>Laboratório: </label>
+                                      <input name="" type="text" class="form-control" placeholder="Laboratório">
+                                    </div>
+
+                  	              	<div class="form-group col-sm-6">
+                                      <label>Tarja:</label>
+                                      <select name="" class="form-control mr-sm-2">
+                                        <option>Vermelha (Com retenção da Receita)</option>
+                                        <option>Vermelha (Sem retenção da Receita)</option>
+                                        <option>Preta</option>
+                                        <option>Amarela</option>
+                                        <option>Sem Tarja</option>
+                                      </select>
+                                    </div>
+
+                                    <div class="form-group col-sm-6">
+                                      <label>Uso Contínuo:</label>
+                                      <select name="" class="form-control mr-sm-6">
+                                        <option>Sim</option>
+                                        <option>Não</option>
+                                      </select>
+                                    </div>
+                                  </form>
+                                </div>                                   
+
+                                <div class="col-md-7">
+                                  <!--alinhamento dos Botões-->
+                                </div>                                    
+
+                                <div class="col-md-2 col-sm-12 col-xs-6">
+                                  <button type="reset" class="btn btn-warning btn-block">LIMPAR</button>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-6">
+                                  <button type="button" class="btn btn-primary btn-block">CADASTRAR</button>
+                                </div>                                
+                              </div>
+
+                                <div class="tab-pane fade" id="Consultar">
+                                  
+                                  <div class="row">
+
+                                    <form role="form">
+                                      <div class="form-group col-sm-12">
+                                        <label>Buscar por:</label>                                        
+                                      </div>
+                                    </form>
+
+                                    <form role="form">                                    
+                                                                         
+                                      <div class="form-group col-sm-2">                                                                                 
+                                        <select class="form-control">
+                                          <option>Código</option>
+                                          <option>Nome</option>
+                                          <option>Laboratório</option>                                            
+                                        </select>                                        
+                                      </div>
+
+                                      <div class="form-group col-sm-8">                                                                            
+                                        <input name="" type="text" class="form-control" placeholder="Descreva o que deseja buscar">
+                                      </div>
+
+                                      <div class="form-group col-sm-2">                                       
+                                        <button class="btn btn-primary btn-block" type="button"><i class="fa fa-search"></i> Buscar</button>
+                                      </div>
+
+                                    </form>
+                                    <br>                                    
+                                    <!--tabelas-->
+                                    <div class="table-responsive col-xs-12 col-sm-12 col-md-12">
+                                      <label>Selecione o medicamento para editar:</label>
+                                      <table class="table table-bordered table-striped">
+                                          <thead>
+                                            <tr>
+                                              <th>
+                                                Código
+                                              </th>
+                                              <th>
+                                                <small>Nome</small>
+                                              </th>
+                                              <th>
+                                                <small>Laboratório</small>
+                                              </th>
+                                              <th>
+                                                <small>Tarja</small>
+                                              </th>
+                                              <th>
+                                                <small>Descrição</small>
+                                              </th>
+                                            </tr>
+                                          </thead>
+                                          <tbody>
+                                            <tr>
+                                                <th class="text-muted"></th>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                            </tr>
+                                            <tr>
+                                                <th class="text-muted"></th>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                            </tr>
+                                            <tr>
+                                                <th class="text-muted"></th>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                            </tr>
+                                            <tr>
+                                                <th class="text-muted"></th>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                            </tr>
+                                            <tr>
+                                                <th class="text-muted"></th>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                            </tr>
+                                            <tr>
+                                                <th class="text-muted"></th>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                                <td class="text-muted"></td>
+                                            </tr>                                              
+                                          </tbody>
+                                      </table>
+                                    </div> 
+
+                                    <form role="form">
+                                      <div class="form-group col-sm-2">                                      
+                                        <label>Código:</label>
+                                        <input name="codigo" type="text" class="form-control" placeholder="Código">
+                                      </div>
+
+                                      <div class="form-group col-sm-2">
+                                        <label>Data de Cadastro:</label>
+                                        <input name="Data de Cadastro" type="text" class="form-control" placeholder="Data">
+                                      </div>
+
+                                      <div class="form-group col-sm-8">
+                                        <label>Nome:</label>
+                                        <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento">
+                                      </div>
+
+                                      <div class="form-group col-sm-12">
+                                        <label>Descrição:</label>
+                                        <textarea class="form-control" rows="3"></textarea>
+                                      </div>
+
+                                      <div class="form-group col-sm-6">
+                                        <label>Princípio Ativo:</label>
+                                        <input name="" type="text" class="form-control" placeholder="Princípio atívo da medicação">
+                                      </div>
+
+                                      <div class="form-group col-sm-6">
+                                        <label>Laboratório: </label>
+                                        <input name="" type="text" class="form-control" placeholder="Laboratório">
+                                      </div>
+
+                                      <div class="form-group col-sm-6">
+                                        <label>Tarja:</label>
+                                        <select name="" class="form-control mr-sm-2">
+                                          <option>Vermelha (Com retenção da Receita)</option>
+                                          <option>Vermelha (Sem retenção da Receita)</option>
+                                          <option>Preta</option>
+                                          <option>Amarela</option>
+                                          <option>Sem Tarja</option>
+                                        </select>
+                                      </div>
+
+                                      <div class="form-group col-sm-6">
+                                        <label>Uso Contínuo:</label>
+                                        <select name="" class="form-control mr-sm-6">
+                                          <option>Sim</option>
+                                          <option>Não</option>
+                                        </select>
+                                      </div>
+                                  </form>
+
+                                  <br>
+
+                                  <div class="col-md-6 col-sm-6">
+                                    <!--alinhamento dos Botões-->
+                                  </div>
+
+                                  <div class="col-md-3 col-sm-3 col-xs-6">
+                                    <button type="button" class="btn btn-danger btn-block">EXCLUIR</button>
+                                  </div>
+
+                                  <div class="col-md-3 col-sm-3 col-xs-6">
+                                    <button type="button" class="btn btn-success btn-block">SALVAR</button>
+                                  </div>
+                                </div>
+                              </div>
+
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     <!-- /.col-lg-12 -->
-                </div>
+                  </div>
                 <!-- /.row -->
             </div>
             <!-- /.container-fluid -->
         </div>
         <!-- /#page-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
 
     <!-- jQuery -->
     <script src="../vendor/jquery/jquery.min.js"></script>
