--- a/pages/blank.html
+++ b/pages/blank.html
@@ -36,8 +36,6 @@
 
     <div id="wrapper">
 
-        <!-- Navigation -->
-        <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -49,7 +47,6 @@
                 <a class="navbar-brand" href="index.html">Prometheus</a>
             </div>
             <!-- /.navbar-header -->
-
             <ul class="nav navbar-top-links navbar-right">
 
                 <!-- /.dropdown -->
@@ -83,62 +80,43 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>
+                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>                            
+                        </li>
+                        <li>
+                            <a href="index.html"><i class="fa fa-user-md fa-fw"></i> Consultas</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-plus-circle fa-fw"></i> Cadastros<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Médico</a>
+                                    <a href="medicos.html">Médico</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Enfermeiro</a>
+                                    <a href="enfermeiro.html">Enfermeiro</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Técnico de Enf.</a>
+                                    <a href="tecnico.html">Técnico de Enf.</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Paciente</a>
+                                    <a href="paciente.html">Paciente</a>
                                 </li>
                                 <li>
-                                    <a href="flot.html">Maqueiro</a>
+                                    <a href="maqueiro.html">Maqueiro</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-clipboard fa-fw"></i> Prontuário<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="flot.html">Novo</a>
-                                </li>
-                                <li>
-                                    <a href="flot.html">Consultar</a>
-                                </li>
-                            </ul>
+                            <a href="prontuario.html"><i class="fa fa-clipboard fa-fw"></i> Prontuário</a>                            
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-medkit fa-fw"></i> Medicamentos<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                              <li>
-                                  <a href="flot.html">Novo</a>
-                              </li>
-                              <li>
-                                  <a href="flot.html">Consultar</a>
-                              </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
+                            <a href="medicamento.html"><i class="fa fa-medkit fa-fw"></i> Medicamentos</a>                            
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-book fa-fw"></i> Sobre</a>
 
                         </li>
 
-                        </li>
-                        
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
