--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Phometheus</title>
+    <title>Prometheus</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,12 +59,11 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> Editar Perfil</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Configuracoes</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
+                        <li>
+                            <a href="#"><i class="fa fa-user fa-fw"></i> Alterar Senha</a>
+                        </li
+                        <li>
+                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
                         </li>
                     </ul>
                 </li>
@@ -87,7 +86,7 @@
                             <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>                            
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-user-md fa-fw"></i> Consultas</a>
+                            <a href="consulta.html"><i class="fa fa-user-md fa-fw"></i> Consultas</a>
                         </li>
                         <li>
                             <a href="prontuario.html"><i class="fa fa-clipboard fa-fw"></i> Prontuários</a>                            
@@ -111,7 +110,10 @@
                                     <a href="maqueiro.html">Maqueiro</a>
                                 </li>
                                 <li>
-                                    <a href="medicamento.html"><i class="fa fa-medkit fa-fw"></i> Medicamentos</a>                            
+                                    <a href="medicamento.html">Medicamento</a>                            
+                                </li>
+                                <li>
+                                    <a href="usuario.html">Usuário</a>                            
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -182,7 +184,7 @@
                                                 <i class="fa fa-clipboard fa-5x"></i>
                                             </div>
                                             <div class="col-xs-9 text-right">                                        
-                                                <div>Consultar Prontuários</div>
+                                                <div>Novo Usuário</div>
                                             </div>
                                         </div>
                                     </div>                        
@@ -196,10 +198,10 @@
                                     <div class="panel-heading">
                                         <div class="row">
                                             <div class="col-xs-3">
-                                                <i class="fa fa-support fa-5x"></i>
+                                                <i class="fa fa-clipboard fa-5x"></i>
                                             </div>
                                             <div class="col-xs-9 text-right">                                   
-                                                <div></div>
+                                                <div>Prontuários</div>
                                             </div>
                                         </div>
                                     </div>
