--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-     <title>Prometheus</title>
+    <title>Prometheus</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,9 +33,10 @@
 </head>
 
 <body>
+
     <div id="wrapper">
 
-       <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -138,7 +139,7 @@
                         <div class="panel panel-primary">
 
                           <div class="panel-heading">
-                              <b>MEDICAMENTOS</b>
+                              <b>USUÁRIOS</b>
                           </div>
                           <!-- /.panel-heading -->
                           <div class="panel-body">
@@ -155,69 +156,51 @@
                             <div class="tab-content">
                               <div class="tab-pane fade in active" id="Cadastrar">                                  
                                 <div class="row">
-                                  <form role="form">
+                                    <form role="form">                                                                    
 
-                                    <div class="form-group col-sm-2">
-                                      <label>Código:</label>
-                                      <input name="codigo" type="text" class="form-control" placeholder="Código">
-                                    </div>
+                                        <div class="form-group col-sm-7">
+                                          <label>Nome:</label>
+                                          <input name="nome" type="text" class="form-control" placeholder="Nome Completo">
+                                        </div>
 
-                                    <div class="form-group col-sm-2">
-                                      <label>Data de Cadastro:</label>
-                  		                <input name="Data de Cadastro" type="text" class="form-control" placeholder="Data">
-                                    </div>
+                                        <div class="form-group col-sm-5">
+                                          <label>Usuário:</label>
+                                          <input name="nome" type="text" class="form-control" placeholder="Usuário">
+                                        </div>
 
-                                    <div class="form-group col-sm-8">
-                                      <label>Nome:</label>
-                                      <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento">
-                                    </div>
+                                        <div class="form-group col-sm-6">
+                                          <label>E-mail:</label>
+                                          <input name="" type="text" class="form-control" placeholder="E-mail">
+                                        </div>
 
-                                    <div class="form-group col-sm-12">
-                                      <label>Descrição:</label>
-                  		                <textarea class="form-control" rows="3"></textarea>
-                                    </div>
+                                        <div class="form-group col-sm-6">
+                                          <label>Perfil:</label>
+                                          <select name="" class="form-control mr-sm-2">
+                                            <option>Médico</option>
+                                            <option>Enfermeiro</option>
+                                            <option>Téc. Enfermagem</option>
+                                            <option>Administrador</option>                                        
+                                          </select>
+                                        </div>                                    
 
-                                    <div class="form-group col-sm-6">
-                                      <label>Princípio Ativo:</label>
-                                      <input name="" type="text" class="form-control" placeholder="Princípio atívo da medicação">
-                                    </div>
+                                        <div class="form-group col-sm-6">
+                                          <label>Senha:</label>
+                                          <input name="" type="text" class="form-control" placeholder="Senha">
+                                        </div>
 
-                                    <div class="form-group col-sm-6">
-                                      <label>Laboratório: </label>
-                                      <input name="" type="text" class="form-control" placeholder="Laboratório">
-                                    </div>
-
-                  	              	<div class="form-group col-sm-6">
-                                      <label>Tarja:</label>
-                                      <select name="" class="form-control mr-sm-2">
-                                        <option>Vermelha (Com retenção da Receita)</option>
-                                        <option>Vermelha (Sem retenção da Receita)</option>
-                                        <option>Preta</option>
-                                        <option>Amarela</option>
-                                        <option>Sem Tarja</option>
-                                      </select>
-                                    </div>
-
-                                    <div class="form-group col-sm-6">
-                                      <label>Uso Contínuo:</label>
-                                      <select name="" class="form-control mr-sm-6">
-                                        <option>Sim</option>
-                                        <option>Não</option>
-                                      </select>
-                                    </div>
-                                  </form>
+                                        <div class="form-group col-sm-6">
+                                          <label>Confirmar Senha: </label>
+                                          <input name="" type="text" class="form-control" placeholder="Confirmar Senha">
+                                        </div>
+                                    </form>
                                 </div>                                   
 
-                                <div class="col-md-7">
+                                <div class="col-md-9">
                                   <!--alinhamento dos Botões-->
-                                </div>                                    
-
-                                <div class="col-md-2 col-sm-12 col-xs-6">
-                                  <button type="reset" class="btn btn-warning btn-block">LIMPAR</button>
                                 </div>
 
-                                <div class="col-md-3 col-sm-12 col-xs-6">
-                                  <button type="button" class="btn btn-primary btn-block">CADASTRAR</button>
+                                <div class="col-md-3 col-sm-12 col-xs-12">
+                                  <button type="button" class="btn btn-success btn-block">SALVAR</button>
                                 </div>                                
                               </div>
 
@@ -399,6 +382,9 @@
             <!-- /.container-fluid -->
         </div>
         <!-- /#page-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
 
     <!-- jQuery -->
     <script src="../vendor/jquery/jquery.min.js"></script>
