--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -170,21 +170,21 @@
 
                                             <div class="form-group col-sm-4">
                                               <label>Telefone:</label>
-                                              <input name="" type="tel" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="15" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                                              <input name="fixo" type="tel" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="10" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
                                             </div>
 
                                             <div class="form-group col-sm-4">
                                               <label>Celular:</label>
-                          		                <input name="" type="tel" class="form-control" placeholder="Digite seu número de celular" id="celular" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                          		                <input name="celular" type="tel" class="form-control" placeholder="Digite seu número de celular" maxlength="11" id="celular" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
                                             </div>
 
                                             <div class="form-group col-sm-4">
                                               <label>Data de Nascimento:</label>
-                          		                <input name="" type="data" class="form-control" placeholder="Informe a data de nascimento" id="data">
+                          		                <input name="dataNasc" type="date" class="form-control" placeholder="Informe a data de nascimento" id="data">
                                             </div>
 
                                             <div class="form-group col-sm-3">
-                                              <label>CEP:</label>
+                                              <label>Cep:</label>
                                               <input name="" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}">
                                             </div>
 
