--- a/pages/medicamento.html
+++ b/pages/medicamento.html
@@ -159,17 +159,17 @@
 
                                     <div class="form-group col-sm-2">
                                       <label>Código:</label>
-                                      <input name="codigo" type="text" class="form-control" placeholder="Código">
+                                      <input name="codigo" type="number" class="form-control" placeholder="Código" required autofocus>
                                     </div>
 
-                                    <div class="form-group col-sm-2">
+                                    <div class="form-group col-sm-3">
                                       <label>Data de Cadastro:</label>
-                  		                <input name="Data de Cadastro" type="text" class="form-control" placeholder="Data">
+                  		                <input name="DataCadastro" type="date" class="form-control" placeholder="Data de cadastro" required>
                                     </div>
 
-                                    <div class="form-group col-sm-8">
+                                    <div class="form-group col-sm-7">
                                       <label>Nome:</label>
-                                      <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento">
+                                      <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento" pattern="[a-zA-Z\s]+$" required>
                                     </div>
 
                                     <div class="form-group col-sm-12">
@@ -179,22 +179,22 @@
 
                                     <div class="form-group col-sm-6">
                                       <label>Princípio Ativo:</label>
-                                      <input name="" type="text" class="form-control" placeholder="Princípio atívo da medicação">
+                                      <input name="principioAtivo" type="text" class="form-control" placeholder="Princípio atívo da medicação" required>
                                     </div>
 
                                     <div class="form-group col-sm-6">
                                       <label>Laboratório: </label>
-                                      <input name="" type="text" class="form-control" placeholder="Laboratório">
+                                      <input name="laboratorio" type="text" class="form-control" placeholder="Laboratório" required>
                                     </div>
 
                                     <div class="form-group col-sm-6">
                                       <label>Quantidade: </label><br>
-                                      <input name="" type="number" class="form-control" placeholder="Quantidade">
+                                      <input name="qtd" type="number" class="form-control" placeholder="Quantidade" required>
                                   </div>
 
                   	              	<div class="form-group col-sm-6">
                                       <label>Tarja:</label>
-                                      <select name="" class="form-control mr-sm-2">
+                                      <select name="tarja" class="form-control mr-sm-2" required>
                                         <option>Vermelha (Com retenção da Receita)</option>
                                         <option>Vermelha (Sem retenção da Receita)</option>
                                         <option>Preta</option>
@@ -205,7 +205,7 @@
 
                                     <div class="form-group col-sm-6">
                                       <label>Uso Contínuo:</label>
-                                      <select name="" class="form-control mr-sm-6">
+                                      <select name="uso" class="form-control mr-sm-6" required>
                                         <option>Sim</option>
                                         <option>Não</option>
                                       </select>
@@ -239,7 +239,7 @@
                                     <form role="form">                                    
                                                                          
                                       <div class="form-group col-sm-2">                                                                                 
-                                        <select class="form-control">
+                                        <select class="form-control" required>
                                           <option>Código</option>
                                           <option>Nome</option>
                                           <option>Laboratório</option>                                            
@@ -247,7 +247,7 @@
                                       </div>
 
                                       <div class="form-group col-sm-8">                                                                            
-                                        <input name="" type="text" class="form-control" placeholder="Descreva o que deseja buscar">
+                                        <input name="" type="text" class="form-control" placeholder="Descreva o que deseja buscar" required autofocus>
                                       </div>
 
                                       <div class="form-group col-sm-2">                                       
@@ -329,12 +329,12 @@
                                     <form role="form">
                                       <div class="form-group col-sm-2">                                      
                                         <label>Código:</label>
-                                        <input name="codigo" type="text" class="form-control" placeholder="Código">
+                                        <input name="codigo" type="number" class="form-control" placeholder="Código">
                                       </div>
 
                                       <div class="form-group col-sm-2">
                                         <label>Data de Cadastro:</label>
-                                        <input name="Data de Cadastro" type="text" class="form-control" placeholder="Data">
+                                        <input name="DataCadastro" type="date" class="form-control" placeholder="Data">
                                       </div>
 
                                       <div class="form-group col-sm-8">
@@ -349,17 +349,17 @@
 
                                       <div class="form-group col-sm-6">
                                         <label>Princípio Ativo:</label>
-                                        <input name="" type="text" class="form-control" placeholder="Princípio atívo da medicação">
+                                        <input name="principioAtivo" type="text" class="form-control" placeholder="Princípio atívo da medicação">
                                       </div>
 
                                       <div class="form-group col-sm-6">
                                         <label>Laboratório: </label>
-                                        <input name="" type="text" class="form-control" placeholder="Laboratório">
+                                        <input name="laboratorio" type="text" class="form-control" placeholder="Laboratório">
                                       </div>
 
                                       <div class="form-group col-sm-6">
                                         <label>Tarja:</label>
-                                        <select name="" class="form-control mr-sm-2">
+                                        <select name="tarja" class="form-control mr-sm-2">
                                           <option>Vermelha (Com retenção da Receita)</option>
                                           <option>Vermelha (Sem retenção da Receita)</option>
                                           <option>Preta</option>
@@ -370,7 +370,7 @@
 
                                       <div class="form-group col-sm-6">
                                         <label>Uso Contínuo:</label>
-                                        <select name="" class="form-control mr-sm-6">
+                                        <select name="uso" class="form-control mr-sm-6">
                                           <option>Sim</option>
                                           <option>Não</option>
                                         </select>
