--- a/pages/prontuario.html
+++ b/pages/prontuario.html
@@ -11,6 +11,24 @@
     
     <title>Prometheus</title>
 
+    <script type="text/javascript">
+      function fMasc(objeto,mascara) {
+        obj=objeto
+        masc=mascara
+        setTimeout("fMascEx()",1)
+      }
+      function fMascEx() {
+        obj.value=masc(obj.value)
+      }
+      function mCPF(cpf){
+        cpf=cpf.replace(/\D/g,"")
+        cpf=cpf.replace(/(\d{3})(\d)/,"$1.$2")
+        cpf=cpf.replace(/(\d{3})(\d)/,"$1.$2")
+        cpf=cpf.replace(/(\d{3})(\d{1,2})$/,"$1-$2")
+        return cpf
+      }
+    </script>
+
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -160,7 +178,7 @@
 
                                 <div class="form-group col-sm-3">
                                     <label>CPF</label>
-                                    <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required autofocus>
+                                    <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" onkeydown="javascript: fMasc( this, mCPF );" maxlength="14" required autofocus>
                                 </div>
 
                                 <div class="form-group col-sm-9">
@@ -337,7 +355,7 @@
 
   <div class="form-group col-sm-3">
     <label>CPF</label>
-    <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
+    <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" onkeydown="javascript: fMasc( this, mCPf );" maxlength="14" required>
 </div>
 
 <div class="form-group col-sm-9">
