NUMBER DO KRALHO
bla pum

--- a/pages/medicos.html
+++ b/pages/medicos.html
@@ -254,8 +254,8 @@
                     </div>
 
                     <div class="form-group col-sm-4">
-                        <label>Cep</label>
-                        <input name="cep" id="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
+                        <label>CEP</label>
+                        <input name="cep" id="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
                     </div>
 
                     <div class="form-group col-sm-6">
@@ -286,7 +286,7 @@
                     <br/>
 
                     <div class="form-group col-sm-6">
-                        <label>Estado</label>
+                        <label>UF</label>
                         <select name="estado" id="estado" class="form-control mr-sm-2" required>
                             <option>Selecione o estado</option>
                             <option value="AC">Acre</option>
@@ -455,8 +455,8 @@
 </div>
 
 <div class="form-group col-sm-4">
-    <label>Cep</label>
-    <input name="cep" id="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
+    <label>CEP</label>
+    <input name="cep" id="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
 </div>
 
 <div class="form-group col-sm-6">
@@ -487,7 +487,7 @@
 <br/>
 
 <div class="form-group col-sm-6">
-    <label>Estado</label>
+    <label>UF</label>
     <select name="estado" id="estado" class="form-control mr-sm-2" required>
         <option>Selecione o estado</option>
         <option value="AC">Acre</option>
