--- a/pages/medicamento.html
+++ b/pages/medicamento.html
@@ -158,42 +158,42 @@
                           <form role="form">
 
                             <div class="form-group col-sm-2">
-                              <label>Código:</label>
+                              <label>Código</label>
                               <input name="codigo" type="number" class="form-control" placeholder="Código" required autofocus>
                             </div>
 
                             <div class="form-group col-sm-3">
-                              <label>Data de Cadastro:</label>
+                              <label>Data de Cadastro</label>
                               <input name="DataCadastro" type="date" class="form-control" placeholder="Data de cadastro" required>
                             </div>
 
                             <div class="form-group col-sm-7">
-                              <label>Nome:</label>
+                              <label>Nome</label>
                               <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento" pattern="[a-zA-Z\s]+$" required>
                             </div>
 
                             <div class="form-group col-sm-12">
-                              <label>Descrição:</label>
+                              <label>Descrição</label>
                               <textarea class="form-control" rows="3"></textarea>
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Princípio Ativo:</label>
+                              <label>Princípio Ativo</label>
                               <input name="principioAtivo" type="text" class="form-control" placeholder="Princípio atívo da medicação" required>
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Laboratório: </label>
+                              <label>Laboratório</label>
                               <input name="laboratorio" type="text" class="form-control" placeholder="Laboratório" required>
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Quantidade: </label><br>
+                              <label>Quantidade</label><br>
                               <input name="qtd" type="number" class="form-control" placeholder="Quantidade" required>
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Tarja:</label>
+                              <label>Tarja</label>
                               <select name="tarja" class="form-control mr-sm-2" required>
                                 <option>Vermelha (Com retenção da Receita)</option>
                                 <option>Vermelha (Sem retenção da Receita)</option>
@@ -204,7 +204,7 @@
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Uso Contínuo:</label>
+                              <label>Uso Contínuo</label>
                               <select name="uso" class="form-control mr-sm-6" required>
                                 <option>Sim</option>
                                 <option>Não</option>
@@ -328,37 +328,37 @@
 
                           <form role="form">
                             <div class="form-group col-sm-2">                                      
-                              <label>Código:</label>
+                              <label>Código</label>
                               <input name="codigo" type="number" class="form-control" placeholder="Código">
                             </div>
 
                             <div class="form-group col-sm-2">
-                              <label>Data de Cadastro:</label>
+                              <label>Data de Cadastro</label>
                               <input name="DataCadastro" type="date" class="form-control" placeholder="Data">
                             </div>
 
                             <div class="form-group col-sm-8">
-                              <label>Nome:</label>
+                              <label>Nome</label>
                               <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento">
                             </div>
 
                             <div class="form-group col-sm-12">
-                              <label>Descrição:</label>
+                              <label>Descrição</label>
                               <textarea class="form-control" rows="3"></textarea>
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Princípio Ativo:</label>
+                              <label>Princípio Ativo</label>
                               <input name="principioAtivo" type="text" class="form-control" placeholder="Princípio atívo da medicação">
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Laboratório: </label>
+                              <label>Laboratório</label>
                               <input name="laboratorio" type="text" class="form-control" placeholder="Laboratório">
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Tarja:</label>
+                              <label>Tarja</label>
                               <select name="tarja" class="form-control mr-sm-2">
                                 <option>Vermelha (Com retenção da Receita)</option>
                                 <option>Vermelha (Sem retenção da Receita)</option>
@@ -369,7 +369,7 @@
                             </div>
 
                             <div class="form-group col-sm-6">
-                              <label>Uso Contínuo:</label>
+                              <label>Uso Contínuo</label>
                               <select name="uso" class="form-control mr-sm-6">
                                 <option>Sim</option>
                                 <option>Não</option>
