--- a/pages/paciente.html
+++ b/pages/paciente.html
@@ -245,7 +245,7 @@
                               </div> 
 
                               <div class="form-group col-sm-4">
-                                <label>Cep</label>
+                                <label>CEP</label>
                                 <input name="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
                               </div>
 
@@ -275,7 +275,7 @@
                               </div>
 
                               <div class="form-group col-sm-6">
-                                <label>Estado</label>
+                                <label>UF</label>
                                 <select name="estado" class="form-control mr-sm-2" required>
                                   <option>Selecione o estado</option>
                                   <option value="AC">Acre</option>
@@ -440,7 +440,7 @@
                               </div> 
 
                               <div class="form-group col-sm-4">
-                                <label>Cep</label>
+                                <label>CEP</label>
                                 <input name="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
                               </div>
 
@@ -470,7 +470,7 @@
                               </div>
 
                               <div class="form-group col-sm-6">
-                                <label>Estado</label>
+                                <label>UF</label>
                                 <select name="estado" class="form-control mr-sm-2" required>
                                   <option>Selecione o estado</option>
                                   <option value="AC">Acre</option>
