--- a/pages/tecnico.html
+++ b/pages/tecnico.html
@@ -322,8 +322,8 @@
                     </div>
 
                     <div class="form-group col-sm-4">
-                        <label>Cep</label>
-                        <input name="cep" id="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
+                        <label>CEP</label>
+                        <input name="cep" id="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
                     </div>
 
                     <div class="form-group col-sm-6">
@@ -354,7 +354,7 @@
                     <br/>
 
                     <div class="form-group col-sm-6">
-                        <label>Estado</label>
+                        <label>UF</label>
                         <select name="estado" id="estado" class="form-control mr-sm-2" required>
                             <option>Selecione o estado</option>
                             <option value="AC">Acre</option>
@@ -523,8 +523,8 @@
 </div>
 
 <div class="form-group col-sm-4">
-    <label>Cep</label>
-    <input name="cep" id="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
+    <label>CEP</label>
+    <input name="cep" id="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" onkeydown="javascript: fMasc( this, mCEP );" required>
 </div>
 
 <div class="form-group col-sm-6">
@@ -555,7 +555,7 @@
 <br/>
 
 <div class="form-group col-sm-6">
-    <label>Estado</label>
+    <label>UF</label>
     <select name="estado" id="estado" class="form-control mr-sm-2" required>
         <option>Selecione o estado</option>
         <option value="AC">Acre</option>
