--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -159,22 +159,22 @@
                             <form role="form">                                                                    
 
                               <div class="form-group col-sm-7">
-                                <label>Nome:</label>
+                                <label>Nome</label>
                                 <input name="nome" type="text" class="form-control" placeholder="Nome Completo" required autofocus>
                               </div>
 
                               <div class="form-group col-sm-5">
-                                <label>Usuário:</label>
+                                <label>Usuário</label>
                                 <input name="nome" type="text" class="form-control" placeholder="Usuário" required="required">
                               </div>
 
                               <div class="form-group col-sm-6">
-                                <label>E-mail:</label>
+                                <label>E-mail</label>
                                 <input name="" type="email" class="form-control" placeholder="E-mail" required="required">
                               </div>
 
                               <div class="form-group col-sm-6">
-                                <label>Perfil:</label>
+                                <label>Perfil</label>
                                 <select name="perfil" class="form-control mr-sm-2" required="required">
                                   <option>Médico</option>
                                   <option>Enfermeiro</option>
@@ -184,12 +184,12 @@
                               </div>                                    
 
                               <div class="form-group col-sm-6" required="required">
-                                <label>Senha:</label>
+                                <label>Senha</label>
                                 <input name="" type="password" class="form-control" placeholder="Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                               </div>
 
                               <div class="form-group col-sm-6" required="required">
-                                <label>Confirmar Senha: </label>
+                                <label>Confirmar Senha</label>
                                 <input name="" type="password" class="form-control" placeholder="Confirmar Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                               </div>
                             </form>
@@ -210,7 +210,7 @@
 
                             <form role="form">
                               <div class="form-group col-sm-12">
-                                <label>Buscar por:</label>                                        
+                                <label>Buscar por</label>                                        
                               </div>
                             </form>
 
@@ -281,22 +281,22 @@
                             <form role="form">                                                                    
 
                               <div class="form-group col-sm-7">
-                                <label>Nome:</label>
+                                <label>Nome</label>
                                 <input name="nome" type="text" class="form-control" placeholder="Nome Completo" pattern="[a-zA-Z\s]+$" required autofocus>
                               </div>
 
                               <div class="form-group col-sm-5">
-                                <label>Usuário:</label>
+                                <label>Usuário</label>
                                 <input name="nome" type="text" class="form-control" placeholder="Usuário" required>
                               </div>
 
                               <div class="form-group col-sm-6">
-                                <label>E-mail:</label>
+                                <label>E-mail</label>
                                 <input name="" type="email" class="form-control" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                               </div>
 
                               <div class="form-group col-sm-6">
-                                <label>Perfil:</label>
+                                <label>Perfil</label>
                                 <select name="perfil" class="form-control mr-sm-2" required="required">
                                   <option>Médico</option>
                                   <option>Enfermeiro</option>
@@ -306,12 +306,12 @@
                               </div>                                    
 
                               <div class="form-group col-sm-6" required="required">
-                                <label>Senha:</label>
+                                <label>Senha</label>
                                 <input name="" type="password" class="form-control" placeholder="Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                               </div>
 
                               <div class="form-group col-sm-6" required="required">
-                                <label>Confirmar Senha: </label>
+                                <label>Confirmar Senha</label>
                                 <input name="" type="password" class="form-control" placeholder="Confirmar Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                               </div>
                             </form>
