Cadastro de enfermeiro PHP

--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -315,7 +315,7 @@
 
                               <div class="form-group col-sm-2">
                                 <label>CEP</label>
-                                <input name="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" maxlength="8"  onblur="pesquisacep(this.value);" onkeydown="javascript: fMasc( this, mCEP );" required>
+                                <input name="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" onblur="pesquisacep(this.value);" onkeydown="javascript: fMasc( this, mCEP );" required>
                               </div>
 
                               <div class="form-group col-sm-8">
